# changeable-cipher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
auxiliary/: DisForm.cpp  DisForm.h  LFSR.cpp  LFSR.h  Markerator.cpp  Markerator.h
common/: DisForm.cpp  DisForm.h  Key.h  KeyParams.h  LFSR.cpp  Markerator.cpp  Markerator.h
keycreator/: CMakeLists.txt
keycreator/keycreator_lib/: CMakeLists.txt  KeyCreator.cpp  KeyCreator.h  KeyParams.h
keycreator/lib/: CMakeLists.txt  DecrKeyParams.cpp  DecrKeyParams.h  DisForm.cpp  DisForm.h  HashTable.cpp  HashTable.h  KeyCreator.cpp  KeyCreator.h  KeyParams.h  KeyStream.cpp  KeyStream.h  LFSRParams.cpp  LFSRParams.h  PrimitivePolynoms.h
keycreator/tests/: CMakeLists.txt  DecrKeyParamsParsing.cpp  HashTableTest.cpp  KeyCreatorTest.cpp  Params.h  main.cpp
libs/: CMakeLists.txt
libs/keycreator_lib/include/: DecrKeyParams.h  KeyCreator.h
libs/keycreator_lib/src/: CMakeLists.txt  DecrKeyParams.cpp  HashTable.cpp  HashTable.h  KeyCreator.cpp  KeyCreatorImpl.cpp  KeyCreatorImpl.h  KeyStream.cpp  KeyStream.h  PrimitivePolynoms.h
libs/keycreator_lib/tests/: CMakeLists.txt  DecrKeyParamsParsing.cpp  HashTableTest.cpp  KeyCreatorTest.cpp  Params.cpp
libs/keycreator_lib/tests/configs/: 1.xml  2.xml
libs/keyio/: CMakeLists.txt
libs/keyio/include/: KeyIO.h
libs/keyio/src/: BitstreamReader.cpp  BitstreamReader.h  BitstreamWriter.cpp  BitstreamWriter.h  CMakeLists.txt  KeyIO.cpp
libs/keyio/tests/: CMakeLists.txt  KeyIOTest.cpp  Params.h  main.cpp
libs/keyio/tests/keys/: key1
performance_info/: gcc_140308.txt  gcc_140316.txt
tests/: performance.sh  performance_enc_dec.sh  performance_full.sh  regression.sh
tests/keys/: 0  enc
utils/: CMakeLists.txt
utils/auxiliary/: CMakeLists.txt
utils/auxiliary/diffpositions/src/: CMakeLists.txt  main.cpp
utils/cipher/src/: CMakeLists.txt  main.cpp
utils/keycreator/src/: CMakeLists.txt  main.cpp
utils/keyinfo/: CMakeLists.txt
utils/keyinfo/src/: main.cpp
